# visual-trace

./: .gitignore  Client.hs  README.md  Server.hs  visual-trace.cabal
Client/: Computations.hs  Graph.hs  ProgressBar.hs  Tree.hs
Data/: Fix.hs
Data/Graph/: Dynamic.hs  Layout.hs
Data/Graph/Dynamic/: Annotated.hs
Data/Graph/Layout/: Physics.hs
Graphics/Gloss/: Text.hs  Utils.hs
Graphics/Gloss/Data/: ColorRead.hs  Event.hs  EventInfo.hs  EventStorage.hs  Ext.hs  Ext2.hs  ExtentF.hs  Feedback.hs  Matrix.hs  PictureF.hs
Graphics/Gloss/Data/EventInfo/: StdLib.hs  Utils.hs
Graphics/Gloss/Data/Ext/: Utils.hs
Graphics/Gloss/Data/PictureF/: Selection.hs  Trans.hs
Graphics/Gloss/Data/ViewState/: Focus.hs  Utils.hs
Protocol/: Graph.hs  ParallelComputation.hs  ProgressBar.hs
VisualTrace/: Server.hs  Text.hs  VTServer.hs
VisualTrace/Client/: Computations.hs  Graph.hs  ProgressBar.hs  Tree.hs
VisualTrace/Data/: ColorRead.hs  Ext.hs  Feedback.hs  Matrix.hs  PictureF.hs
VisualTrace/Data/Ext/: Utils.hs
VisualTrace/Data/Graph/: Layout.hs
VisualTrace/Data/Graph/Dynamic/: Annotated.hs
VisualTrace/Data/Graph/Layout/: Physics.hs
VisualTrace/Data/PictureF/: Selection.hs  Trans.hs
VisualTrace/Data/ViewState/: Focus.hs  Utils.hs
VisualTrace/Protocol/: Graph.hs  Image.hs  ParallelComputation.hs  ProgressBar.hs
src/Control/Applicative/: WrapMonadDual.hs
src/Debug/: Utils.hs
src/VisualTrace/: Client.hs  Grid.hs  HTTPConfig.hs  Server.hs  Text.hs  Times.hs  VTServer.hs
src/VisualTrace/Client/: Circles.hs  Computations.hs  Graph.hs  ParallelComputation.hs  ProgressBar.hs  Tree.hs
src/VisualTrace/Data/: EventInfo.hs  Feedback.hs  Fix.hs  Interval.hs  Matrix.hs  Picture.hs  SegmentTree.hs
src/VisualTrace/Data/EventInfo/: StdLib.hs  Utils.hs
src/VisualTrace/Data/Ext/: Utils.hs
src/VisualTrace/Data/Feedback/: FeedbackStorage.hs
src/VisualTrace/Data/Graph/: Dynamic.hs
src/VisualTrace/Data/Graph/Layout/: Physics.hs
src/VisualTrace/Data/Picture/: OpenGL.hs  OpenGLTemplate.hs  Selection.hs  Trans.hs
src/VisualTrace/Data/PictureF/: Selection.hs  Trans.hs
src/VisualTrace/Data/ViewState/: Focus.hs
src/VisualTrace/Protocol/: Circles.hs  Graph.hs  Image.hs  ParallelComputation.hs  ProgressBar.hs
src/VisualTrace/Protocol/Image/: CachedImage.hs
test/GLUTApp/: Main.cpp
