name:          visual-trace
version:       0.0.0
license:       BSD3
author:        Anton Dubovik
cabal-version: >= 1.8
synopsis:      Visual trace library
build-type:    Simple
category:      Debug

source-repository head
  type:     git
  location: https://github.com/adubovik/visual-trace.git

library
  build-depends:
    base, containers, mtl, random, tagged,
    GLUT, gloss,
    http-conduit, http-server==1.0.4, network, url,
    utf8-string, bytestring,
    optparse-applicative
  hs-source-dirs: src
  exposed-modules:
    VisualTrace.Text,
    VisualTrace.Server,
    VisualTrace.Client,

    VisualTrace.Data.Feedback,
    VisualTrace.Data.PictureF,
    VisualTrace.Data.EventInfo.StdLib,
    VisualTrace.Data.EventInfo.Utils,
    VisualTrace.Data.ColorRead,

    VisualTrace.Data.Graph.Dynamic.Annotated,
    VisualTrace.Data.Graph.Layout,

    VisualTrace.Protocol.ProgressBar,
    VisualTrace.Protocol.Graph,
    VisualTrace.Protocol.ParallelComputation,
    VisualTrace.Protocol.Image
  other-modules:
    Control.Applicative.WrapMonadDual,
    VisualTrace.VTServer,
    VisualTrace.Data.Graph.Layout.Physics,
    VisualTrace.Data.Graph.Dynamic,
    VisualTrace.Data.Ext,
    VisualTrace.Data.Fix,
    VisualTrace.Data.Ext.Utils,
    VisualTrace.Data.Matrix,
    VisualTrace.Data.EventInfo,
    VisualTrace.Data.PictureF.Selection,
    VisualTrace.Data.PictureF.Trans,
    VisualTrace.Data.ViewState.Utils,
    VisualTrace.Data.ViewState.Focus,
    VisualTrace.Protocol.Image.CachedImage,
    VisualTrace.Client.ProgressBar,
    VisualTrace.Client.Graph,
    VisualTrace.Client.Computations,
    VisualTrace.Client.Tree,
    VisualTrace.HTTPConfig,
    Debug.Utils
  ghc-options: -Wall -Werror -O2

executable vt-server
  build-depends:
    base, containers, mtl, random, tagged,
    GLUT, gloss,
    http-conduit, http-server==1.0.4, network, url,
    utf8-string, bytestring,
    optparse-applicative
  hs-source-dirs: src
  main-is: VisualTrace/VTServer.hs
  ghc-options: -Wall -Werror -O2 -main-is VisualTrace.VTServer

executable vt-server-prof
  build-depends:
    base, containers, mtl, random, tagged,
    GLUT, gloss,
    http-conduit, http-server==1.0.4, network, url,
    utf8-string, bytestring,
    optparse-applicative
  hs-source-dirs: src
  main-is: VisualTrace/VTServer.hs
  ghc-options: -main-is VisualTrace.VTServer -prof -fprof-auto -rtsopts

executable vt-graph
  build-depends:
    base, containers, mtl, random, tagged,
    GLUT, gloss,
    http-conduit, http-server==1.0.4, network, url,
    utf8-string, bytestring,
    optparse-applicative
  hs-source-dirs: src
  main-is: VisualTrace/Client/Graph.hs
  ghc-options: -Wall -Werror -O2 -main-is VisualTrace.Client.Graph

executable vt-progressbar
  build-depends:
    base, containers, mtl, random, tagged,
    GLUT, gloss,
    http-conduit, http-server==1.0.4, network, url,
    utf8-string, bytestring,
    optparse-applicative
  hs-source-dirs: src
  main-is: VisualTrace/Client/ProgressBar.hs
  ghc-options: -Wall -Werror -O2 -main-is VisualTrace.Client.ProgressBar

executable vt-parallelcomputation
  build-depends:
    base, containers, mtl, random, tagged,
    GLUT, gloss,
    http-conduit, http-server==1.0.4, network, url,
    utf8-string, bytestring,
    optparse-applicative
  hs-source-dirs: src
  main-is: VisualTrace/Client/Computations.hs
  ghc-options: -Wall -Werror -O2 -main-is VisualTrace.Client.Computations
