name:          visual-trace
version:       0.0.0
license:       BSD3
author:        Anton Dubovik
cabal-version: >= 1.8
synopsis:      Visual trace library
build-type:    Simple
category:      Debug

source-repository head
  type:     git
  location: https://github.com/adubovik/visual-trace.git

library
  build-depends:
    base, time==1.4.*, containers, mtl, random, tagged,
    GLUT, gloss,
    http-conduit, http-server==1.0.4, network, url,
    utf8-string, bytestring,
    optparse-applicative
  hs-source-dirs: src
  exposed-modules:
    VisualTrace.Text,
    VisualTrace.Server,
    VisualTrace.Client,

    VisualTrace.Data.Feedback,
    VisualTrace.Data.Picture,
    VisualTrace.Data.EventInfo.StdLib,
    VisualTrace.Data.EventInfo.Utils,
    VisualTrace.Data.ColorRead,

    VisualTrace.Data.Graph.Dynamic.Annotated,
    VisualTrace.Data.Graph.Layout,

    VisualTrace.Protocol.ProgressBar,
    VisualTrace.Protocol.Graph,
    VisualTrace.Protocol.Circles,
    VisualTrace.Protocol.ParallelComputation,
    VisualTrace.Protocol.Image
  other-modules:
    Control.Applicative.WrapMonadDual,
    VisualTrace.VTServer,
    VisualTrace.Data.Graph.Layout.Physics,
    VisualTrace.Data.Graph.Dynamic,
    VisualTrace.Data.Ext,
    VisualTrace.Data.Fix,
    VisualTrace.Data.Ext.Utils,
    VisualTrace.Data.Matrix,
    VisualTrace.Data.EventInfo,
    VisualTrace.Data.Picture.Selection,
    VisualTrace.Data.Picture.Trans,
    VisualTrace.Data.ViewState.Utils,
    VisualTrace.Data.ViewState.Focus,
    VisualTrace.Data.SegmentTree,
    VisualTrace.Data.Interval,
    VisualTrace.Protocol.Image.CachedImage,
    VisualTrace.Client.ProgressBar,
    VisualTrace.Client.Graph,
    VisualTrace.Client.Tree,
    VisualTrace.Client.Circles,
    VisualTrace.Client.ParallelComputation,
    VisualTrace.HTTPConfig,
    VisualTrace.Grid,
    Debug.Utils
  ghc-options: -Wall -Werror -O2

executable vt-server
  build-depends:
    base, time==1.4.*, containers, mtl, random, tagged,
    GLUT, gloss,
    http-conduit, http-server==1.0.4, network, url,
    utf8-string, bytestring,
    optparse-applicative
  hs-source-dirs: src
  main-is: VisualTrace/VTServer.hs
  ghc-options: -Wall -Werror -O2 -main-is VisualTrace.VTServer

executable vt-graph
  build-depends:
    base, time==1.4.*, containers, mtl, random, tagged,
    GLUT, gloss,
    http-conduit, http-server==1.0.4, network, url,
    utf8-string, bytestring,
    optparse-applicative
  hs-source-dirs: src
  main-is: VisualTrace/Client/Graph.hs
  ghc-options: -Wall -Werror -O2 -main-is VisualTrace.Client.Graph

executable vt-progressbar
  build-depends:
    base, time==1.4.*, containers, mtl, random, tagged,
    GLUT, gloss,
    http-conduit, http-server==1.0.4, network, url,
    utf8-string, bytestring,
    optparse-applicative
  hs-source-dirs: src
  main-is: VisualTrace/Client/ProgressBar.hs
  ghc-options: -Wall -Werror -O2 -main-is VisualTrace.Client.ProgressBar

executable vt-parallelcomputation
  build-depends:
    base, time==1.4.*, containers, mtl, random, tagged,
    GLUT, gloss,
    http-conduit, http-server==1.0.4, network, url,
    utf8-string, bytestring,
    optparse-applicative
  hs-source-dirs: src
  main-is: VisualTrace/Client/ParallelComputation.hs
  ghc-options: -Wall -Werror -O2 -main-is VisualTrace.Client.ParallelComputation

executable vt-circles
  build-depends:
    base, time==1.4.*, containers, mtl, random, tagged,
    GLUT, gloss,
    http-conduit, http-server==1.0.4, network, url,
    utf8-string, bytestring,
    optparse-applicative
  hs-source-dirs: src
  main-is: VisualTrace/Client/Circles.hs
  ghc-options: -Wall -Werror -O2 -main-is VisualTrace.Client.Circles
